@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.7 2004/04/29 18:01:05 abs Exp $
+$NetBSD: distinfo,v 1.8 2004/07/07 16:51:26 xtraeme Exp $
 
 SHA1 (GD-2.11.tar.gz) = 2ed3aa80bcc357560ba9433ce90b02f89cc73a4f
 Size (GD-2.11.tar.gz) = 154432 bytes
-SHA1 (patch-aa) = 35ccf68dfc1ee268a4ffd431bb7ab29a7c7f59e9
+SHA1 (patch-aa) = d40e41e7f998b4a2b8570a0882a7bfdfe0ee109d
